frontend/test/should_pass/basic_100.grg
rule r {
	pattern {
		x:Node -e:Edge-> y:Node --> z:Node;
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

